--- a/config/llm_config_mpt.json
+++ b/config/llm_config_mpt.json
@@ -1,5 +1,6 @@
 {
-    "name": "mosaicml/mpt-7b-chat-8k",
-    "load_in_8bit": true,
-    "device_map": "auto"
+  "name": "mosaicml/mpt-7b-chat-8k",
+  "load_in_8bit": true,
+  "device_map": "auto",
+  "max_tokens": 3500
 }
