Add other models

--- a/config/llm_config_mpt_30b.json
+++ b/config/llm_config_mpt_30b.json
@@ -1,5 +1,5 @@
 {
-  "name": "meta-llama/Llama-2-13b-chat-hf",
+  "name": "mosaicml/mpt-30b-chat",
   "load_in_8bit": true,
   "device_map": "auto",
   "max_tokens": 3500
